@@ -1,5 +1,6 @@
 Changelog for Shake
 
+    #166, add withTempFile and withTempDir in the Action monad
     Ensure Ninja response files are always deleted
     Fix incorrect units when showing profile to the console
     Require the extra library
